--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="Phumelela Special Care Centre" description="Disability centre in Ezibeleni, Queenstown. We offer various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <!-- DO NOT FORGET TO ADD SEO CONTENT-->
          <!--Add icon-->
     </head>
