html pages updates
html pages updates

--- a/gallery.html
+++ b/gallery.html
@@ -3,11 +3,11 @@
 <!-- This is what we are imitating: https://sunshine.org.za/-->
     <head>
         <title>Phumelela Special Care Centre</title>
+        <link rel="stylesheet" href="styles.css">
         <!-- This is where we link to CSS sheets, so when we have created them, this is where they will come. -->
         <meta charset="UTF-8">
         <meta name="Phumelela Special Care Centre" description="Disability centre in Ezibeleni, Queenstown. We offer various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/styles.css">
         <!-- DO NOT FORGET TO ADD SEO CONTENT-->
     </head>
     
