--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Phumelela Special Care Centre - Blog</title> 
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta name="description" content="Phumelela Special Care Centre blog featuring stories, updates, and insights into our programmes and the lives of children with disabilities.">    
 </head>
 <body>
