--- a/programmes.html
+++ b/programmes.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>Phumelela Special Care Centre - Programmes</title>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
     <meta name="description" content="Phumelela Special Care Centre offers various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa.">
 </head>
 <body>  
