--- a/gallery.html
+++ b/gallery.html
@@ -20,13 +20,13 @@
             
             <nav class="main-nav">
             <!-- Create HTML pages for all these so I can add the relevant href links-->
-                <a href="phumelela-index.html">Home<a>
-                <a href="about.html">About<a>
-                <a href="gallery.html">Gallery<a>
-                <a href="programmes.html">Programmes</a>
-                <a href="wishlist.html">Wishlist<a></a>
-                <a href="contact-us.html">Contact Us</a>
-                <a href="blog.html">Blog</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="programmes.html">Programmes</a>
+            <a href="wishlist.html">Wishlist<a></a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="blog.html">Blog</a>
             </nav>
             <hr>
         </header>
