--- a/wishlist.html
+++ b/wishlist.html
@@ -20,13 +20,13 @@
             
             <nav class="main-nav">
             <!-- Create HTML pages for all these so I can add the relevant href links-->
-                <a href="phumelela-index.html">Home<a>
-                <a href="about.html">About<a>
-                <a href="gallery.html">Gallery<a>
-                <a href="programmes.html">Programmes</a>
-                <a href="wishlist.html">Wishlist<a></a>
-                <a href="contact-us.html">Contact Us</a>
-                <a href="blog.html">Blog</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="programmes.html">Programmes</a>
+            <a href="wishlist.html">Wishlist<a></a>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="blog.html">Blog</a>
             </nav>
             <hr>
         </header>
@@ -48,6 +48,8 @@
                 <li>Therapeutic equipment (sensory toys, therapy mats, etc.)</li>
                 <li>Craft materials for our creative arts programmes</li>
                 <li>Clothing and personal care items for our learners</li>
+                <li>Dough mix and proofer for out bakery</li>
+
 
                 <h3 class="gardening-and-farming"> Gardening & Farming</h3>
                 <li>Gardening tools and supplies (seeds, manure) for our gardening programme</li>
