--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="about.html">About</a>
             <a href="gallery.html">Gallery</a>
             <a href="programmes.html">Programmes</a>
-            <a href="wishlist.html">Wishlist<a></a>
+            <a href="wishlist.html">Wishlist</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="blog.html">Blog</a>
             </nav>
