Update meta tags and favicon across HTML files
Standardized meta tags for SEO, added keywords and robots directives, and included favicon link in all HTML files. Fixed typos and improved consistency in descriptions. Minor CSS adjustments for layout and padding.

--- a/about.html
+++ b/about.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Phumelela Special Care Centre</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
+        <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <link rel="icon" href="logo.png" type="image/x-icon"> 
 </head>
 
 <body>
