--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Phumelela Special Care Centre</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <meta name="Phumelela Special Care Centre" description="Disability centre in Ezibeleni, Queenstown. We offer various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-
-        <!-- DO NOT FORGET TO ADD SEO CONTENT-->
-         <!--Add icon-->
+        <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
+        <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <link rel="icon" href="logo.png" type="image/x-icon">  
     </head>
     
     <body>
