--- a/programmes.html
+++ b/programmes.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Phumelela Special Care Centre - Programmes</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Phumelela Special Care Centre offers various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa.">
+        <title>Phumelela Special Care Centre</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
+        <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <link rel="icon" href="logo.png" type="image/x-icon"> 
 </head>
 <body>  
     <header>
