--- a/wishlist.html
+++ b/wishlist.html
@@ -4,11 +4,12 @@
     <head>
         <title>Phumelela Special Care Centre</title>
         <link rel="stylesheet" href="styles.css">
-        <!-- This is where we link to CSS sheets, so when we have created them, this is where they will come. -->
         <meta charset="UTF-8">
-        <meta name="Phumelela Special Care Centre" description="Disability centre in Ezibeleni, Queenstown. We offer various skills-based programmes to over 100 learners from Queenstown, surrounding areas, and across South Africa">
-        <meta name="viewport" width="device-width, initial-scale=1.0">
-        <!-- DO NOT FORGET TO ADD SEO CONTENT-->
+        <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
+        <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <link rel="icon" href="logo.png" type="image/x-icon"> 
     </head>
     
     <body>
@@ -47,7 +48,7 @@
                 <li>Therapeutic equipment (sensory toys, therapy mats, etc.)</li>
                 <li>Craft materials for our creative arts programmes</li>
                 <li>Clothing and personal care items for our learners</li>
-                <li>Dough mix and proofer for out bakery</li>
+                <li>Dough mix and proofer for our bakery</li>
 
 
                 <h3 class="gardening-and-farming"> Gardening & Farming</h3>
