--- a/programmes.html
+++ b/programmes.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>Phumelela Special Care Centre</title>
-        <link rel="stylesheet" href="styles.css">
-        <meta charset="UTF-8">
-        <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
-        <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
-        <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <link rel="icon" href="logo.png" type="image/x-icon"> 
+    <title>Phumelela Special Care Centre - Programmes</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities." />
+    <meta name="keywords" content="special care, disability, Phumelela, South Africa, children" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="logo.png" type="image/x-icon" />
 </head>
-<body>  
+<body>
     <header>
         <icon class="logo">
-            <img class="logo" src="logo.png" alt="Phumelela Special Care Centre Logo"/>
+            <img class="logo" src="logo.png" alt="Phumelela Special Care Centre Logo" />
         </icon>
         <h1 class="heading-1">Phumelela Special Care Centre</h1>
         
         <nav class="main-nav">
-        <!-- Create HTML pages for all these so I can add the relevant href links-->
+            <!-- Navigation links -->
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="gallery.html">Gallery</a>
-            <a href="programmes.html">Programmes</a>
-            <a href="wishlist.html">Wishlist<a></a>
+            <a href="programmes.html" aria-current="page">Programmes</a>
+            <a href="wishlist.html">Wishlist</a>
             <a href="contact-us.html">Contact Us</a>
             <a href="blog.html">Blog</a>
         </nav>
         <hr>
     </header>
-
 
     <main>
         <h2 class="heading-2">Our Programmes</h2>
@@ -41,44 +40,49 @@
             <li>Skills development initiatives including gardening, baking, farming (pigs and chickens), beadwork, jam and juice making</li>
             <li>Advocacy for disability inclusion and awareness</li>
         </ul>
-    <hr>
+
+        <hr>
+
         <h2 class="heading-2">Skills Development Initiatives</h2>
         <p>We focus on practical skills that empower our learners to become independent and self-sufficient. These initiatives include:</p>
         <ul>
             <li><strong>Gardening:</strong> Teaching sustainable practices and providing fresh produce.</li>
             <li><strong>Baking:</strong> Developing culinary skills and creating products for sale.</li>
-            <li><strong>Farming: </strong> Raising pigs and chickens to understand animal husbandry.</li>
+            <li><strong>Farming:</strong> Raising pigs and chickens to understand animal husbandry.</li>
             <li><strong>Beadwork:</strong> Encouraging creativity while producing beautiful crafts.</li>
             <li><strong>Jam and Juice Making:</strong> Learning food preservation techniques.</li>
         </ul>
-        <!-- Add more sections as needed -->
     </main>
 
     <section>
         <!-- Contact Us section -->
         <form action="submit_form.php" method="post" class="form">
-            <h2 class="contact-us" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;" class="heading-2">Contact Us</h2>
+            <h2 class="contact-us heading-2" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Contact Us</h2>
             <p>If you would like to learn more about Phumelela Special Care Centre, our programmes, or how you can support our work, please contact us:</p>
             
             <fieldset class="contact-form">
-             <input type="text" id="name" name="name" placeholder="Your Name" required>
-             <input type="text" id="surname" name="surname" placeholder="Your Surname" required>
-             <input type="tel" id="cellnumber" name="cellnumber" placeholder="Your Cellphone Number" required>
-             <input type="email" id="email" name="email" placeholder="Your Email" required>
-             <p class="disclaimer">Your details are safe with us.</p>
-             <input type="text" id="message" name="message" placeholder="Your Message" required>
-             <button type="submit" class="submit-button">Submit</button>
-         </fieldset>
-             </form>   
+                <input type="text" id="name" name="name" placeholder="Your Name" required />
+                <input type="text" id="surname" name="surname" placeholder="Your Surname" required />
+                <input type="tel" id="cellnumber" name="cellnumber" placeholder="Your Cellphone Number" required />
+                <input type="email" id="email" name="email" placeholder="Your Email" required />
+                <p class="disclaimer">Your details are safe with us.</p>
+                <input type="text" id="message" name="message" placeholder="Your Message" required />
+                <button type="submit" class="submit-button">Submit</button>
+            </fieldset>
+        </form>   
     </section>
 
-    </body>
-    <hr>
+    <hr />
     <footer>
         <div class="footer">
-            <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank"><img src="facebook-icon.png" alt="Facebook Icon" class="social-media"></a>
-            <a href="https://www.instagram.com/phumelela_special_care_centre/" target="_blank"><img src="instagram-icon.png" alt="instagram Icon" class="social-media"></a>
-            <p>&copy 2025 Phumelela Special Care Centre. All Rights Reserved.</p>
+            <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank" rel="noopener noreferrer">
+                <img src="facebook-icon.png" alt="Facebook Icon" class="social-media" />
+            </a>
+            <a href="https://www.instagram.com/phumelela_special_care_centre/" target="_blank" rel="noopener noreferrer">
+                <img src="instagram-icon.png" alt="Instagram Icon" class="social-media" />
+            </a>
+            <p>&copy; 2025 Phumelela Special Care Centre. All Rights Reserved.</p>
         </div> 
     </footer>
-    </html>
+</body>
+</html>
