style updates to the about and gallery pages
style updates to the about and gallery pages

--- a/blog.html
+++ b/blog.html
@@ -66,17 +66,16 @@
         </form>   
     </section>
 
-    <footer>
-        <hr>
-        <div class="footer">
-            <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank" rel="noopener noreferrer">
-                <img src="facebook-icon.png" alt="Facebook Icon" class="social-media">
-            </a>
-            <a href="https://www.instagram.com/phumelela_special_care_centre/" target="_blank" rel="noopener noreferrer">
-                <img src="instagram-icon.png" alt="Instagram Icon" class="social-media">
-            </a>
-            <p>&copy; 2025 Phumelela Special Care Centre. All Rights Reserved.</p>
-        </div> 
-    </footer>
+      <footer>
+    <div class="footer">
+      <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank">
+        <img src="facebook-icon.png" alt="Facebook" class="social-icon" />
+      </a>
+      <a href="https://www.instagram.com/phumelela_special_care_centre/" target="_blank">
+        <img src="instagram-icon.png" alt="Instagram" class="social-icon" />
+      </a>
+      <p>&copy; 2025 Phumelela Special Care Centre. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
