--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <img src="upcsa-icon.png" alt="UPCSA" class="donor-logo" />
       <img src="wimpy-icon.png" alt="Wimpy" class="donor-logo" />
       <img src="pep-icon.png" alt="PEP" class="donor-logo" />
-      <!-- Add all other logos here as before -->
+      <!-- Add all other logos here -->
     </div>
   </section>
 
