indentation updates to images in gallery
indentation updates to images in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -79,9 +79,10 @@
             <img src="image-14.png" alt="Gallery image 14" class="gallery-image" />
             <img src="image-15.png" alt="Gallery image 15" class="gallery-image" />
             <img src="image-16.png" alt="Gallery image 16" class="gallery-image" />
+
             <img src="image-18.png" alt="Gallery image 18" class="gallery-image" />
-            <img src="image-9.png" alt="Heritage Day celebration image 1" class="gallery-image" />
-            <img src="image-17.png" alt="Gallery image 17" class="gallery-image" />
+            <!-- <img src="image-9.png" alt="Heritage Day celebration image 1" class="gallery-image" />
+            <img src="image-17.png" alt="Gallery image 17" class="gallery-image" /> -->
             </div>
         </div>
     </main>
