header and wishlist page updates
header and wishlist page updates

--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phumelela Special Care Centre - About Us</title>
     <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
     <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
     <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
     <meta name="robots" content="index, follow">
@@ -12,24 +13,21 @@
 </head>
 
 <body>
-    <header>
-        <icon class="logo">
-            <img class="logo" src="logo.png" alt="Phumelela Special Care Centre Logo"/>
-        </icon>
-        <h1 class="heading-1">Phumelela Special Care Centre</h1>
-        
-        <nav class="main-nav">
-            <!-- Navigation links -->
-            <a href="index.html">Home</a>
-            <a href="about.html" aria-current="page">About</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="programmes.html">Programmes</a>
-            <a href="wishlist.html">Wishlist</a>
-            <a href="contact-us.html">Contact Us</a>
-            <a href="blog.html">Blog</a>
-        </nav>
-        <hr>
-    </header>
+      <header>
+    <div class="header-container">
+      <img src="logo.png" alt="Phumelela Logo" class="logo" />
+      <h1 class="site-title">Phumelela Special Care Centre</h1>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="programmes.html">Programmes</a>
+        <a href="wishlist.html" aria-current="page">Wishlist</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="blog.html">Blog</a>
+      </nav>
+    </div>
+  </header>
 
     <main>
         <section>
@@ -103,7 +101,7 @@
         </section>
     </main>
 
-    <footer>
+  <footer>
     <div class="footer">
       <a href="https://www.facebook.com/phumelela.specialcarecentre" target="_blank">
         <img src="facebook-icon.png" alt="Facebook" class="social-icon" />
