--- a/contact-us.html
+++ b/contact-us.html
@@ -11,24 +11,21 @@
     <link rel="icon" href="logo.png" type="image/x-icon"> 
 </head>
 <body>  
-    <header>
-        <icon class="logo">
-            <img class="logo" src="logo.png" alt="Phumelela Special Care Centre Logo"/>
-        </icon>
-        <h1 class="heading-1">Phumelela Special Care Centre</h1>
-        
-        <nav class="main-nav">
-            <!-- Navigation links -->
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="programmes.html">Programmes</a>
-            <a href="wishlist.html">Wishlist</a>
-            <a href="contact-us.html" aria-current="page">Contact Us</a>
-            <a href="blog.html">Blog</a>
-        </nav>
-        <hr>
-    </header>
+      <header>
+    <div class="header-container">
+      <img src="logo.png" alt="Phumelela Logo" class="logo" />
+      <h1 class="site-title">Phumelela Special Care Centre</h1>
+      <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="programmes.html">Programmes</a>
+        <a href="wishlist.html" aria-current="page">Wishlist</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="blog.html">Blog</a>
+      </nav>
+    </div>
+  </header>
 
     <main>
         <section>
