styles and js updates
styles and js updates

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header>
     <div class="header-container">
+      <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
       <img src="logo.png" alt="Phumelela Logo" class="logo" />
       <h1 class="site-title">Phumelela Special Care Centre</h1>
       <nav class="main-nav">
@@ -128,5 +129,15 @@
       <p>&copy; 2025 Phumelela Special Care Centre. All rights reserved.</p>
     </div>
   </footer>
+  
+  <script>
+  const toggle = document.querySelector('.nav-toggle');
+  const nav = document.querySelector('.main-nav');
+
+  toggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
+</script>
+
 </body>
 </html>
