index.html nav updates
index.html nav updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="header-container">
-      <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
+      <!-- <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button> -->
       <img src="logo.png" alt="Phumelela Logo" class="logo" />
       <h1 class="site-title">Phumelela Special Care Centre</h1>
       <nav class="main-nav">
@@ -130,14 +130,14 @@
     </div>
   </footer>
   
-  <script>
+ <!-- <script>
   const toggle = document.querySelector('.nav-toggle');
   const nav = document.querySelector('.main-nav');
 
   toggle.addEventListener('click', () => {
     nav.classList.toggle('active');
   });
-</script>
+</script> -->
 
 </body>
 </html>
