several content and style updates
several content and style updates

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phumelela Special Care Centre - About Us</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-HASH" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="Disability centre in Ezibeleni, Queenstown. Phumelela Special Care Centre provides holistic support to children with disabilities.">
     <meta name="keywords" content="special care, disability, Phumelela, South Africa, children">
@@ -31,38 +32,30 @@
 
     <main>
         <section>
-            <h1 class="heading-2">About Us</h1>
+            <h1 class="heading-2">About Phumelela Special Care Centre</h1> <!-- Change heading style, make it unique -->
 
             <article>
-                <h2 class="heading-3">Who We Are</h2>
-                <p>Phumelela Special Care Centre is a non-profit organisation based in Ezibeleni, Queenstown, serving children and youth with diverse disabilities, including physical disabilities, intellectual and developmental disabilities (IDD), and complex support needs. Since 2005, we have provided daily care, education, and therapeutic support to learners who are often excluded from mainstream services. Our centre offers an inclusive, compassionate environment tailored to the needs of each child.</p>
+              
+                <p>Phumelela Special Care Centre is a non-profit organisation based in Ezibeleni, Queenstown. We serve children and youth with diverse disabilities, including intellectual and developmental disabilities (IDD), physical disabilities, and complex support needs. Since 2005, we have provided daily care, education, meals, and therapeutic support to learners who are often excluded from mainstream services. Our centre offers an inclusive, compassionate environment tailored to each child’s unique potential.</p>
             </article>
 
-            <hr class="about-hr">
+            <hr class="about-hr"> <!-- Make this line unique too -->
 
             <article>
-                <h2 class="heading-2">Mission &amp; Vision</h2>
+                <!-- Add icons to these as list items-->
 
                 <h3 class="heading-3">Mission</h3>
                 <p>Our mission is to establish a viable community-based centre to help all the people with disabilities at Ezibeleni Lukhanji Municipality and surrounding communities with appropriate skills and effective empowerment to make them independent and free from abuse and neglect.</p>
 
                 <h3 class="heading-3">Vision</h3>
                 <p>Our vision is to empower and improve social functioning and quality of life of the people with disabilities.</p>
-            </article>
 
-            <hr class="about-hr">
-
-            <article>
-                <h2 class="heading-2">Our Story</h2>
-
-                <h3 class="heading-3">How We Started</h3>
-                <p>Phumelela Special Care Centre was established in response to the lack of suitable facilities for children with physical and mental challenges in Ezibeleni. Since 2005, we have provided daily care, education, and therapeutic support to learners who are often excluded from mainstream services. Our centre offers an inclusive, compassionate environment tailored to the needs of each child.</p>
-
-                <!-- You mentioned Gogo, Zan, and another lady here; you can add a subsection or paragraph here to introduce them later -->
-
-                <h3 class="heading-3">Our Background</h3>
-                <p>The centre was initially housed in a shack at the old rent office with only three children. It moved to the Social Development building in 2007. Operating without its own funding, the centre relies on donations from the community, churches, and businesses. We provide two meals a day, currently serving 127 children. Unemployment and poverty remain significant challenges for many families.</p>
-            </article>
+                <h3 class="heading-3">History</h3>
+                <p>Phumelela was founded in February 2005 by a group of concerned parents in Ezibeleni. They recognised the urgent need for proper care and support for children living with both physical and intellectual disabilities—needs that were not being met by existing facilities. <a href="phumelela-history.pdf" target="_blank" class="social-link">Read More</a> </p>
+            
+                <h3 class="heading-3">BEE & Tax Compliance</h3>
+                <p>We are a registered non-profit organisation with an Exempted Micro-Enterprise (EME) BEE status. We are also fully tax compliant. By partnering with us, you can contribute meaningfully to socio-economic development (SED) and earn points on your own B-BBEE scorecards, while making a tangible impact in the lives of children with disabilities.</p>
+              </article>
 
             <hr class="about-hr">
 
