--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <h2>Support Our Work</h2>
     <p>Help us continue making a difference in the lives of children with disabilities. View our wishlist or make a donation today.</p>
     <div class="wishlist-actions">
-      <a href="wishlist.html" class="btn-secondary">View Our Wishlist</a>
-      <a href="donate.html" class="btn-cta">Donate Now</a>
+      <a href="wishlist.html" class="btn-secondary">VIEW OUR WISH LIST</a>
+      <a href="donate.html" class="btn-cta">Make a Donation</a>
     </div>
   </section>
 
