--- a/programmes.html
+++ b/programmes.html
@@ -27,28 +27,38 @@
     </div>
   </header>
 
-    <main style="max-width: 1200px; margin: auto;">
-        <h2 class="heading-2">Our Programmes</h2>
-        <p>Phumelela Special Care Centre offers a range of programmes designed to support the development and well-being of children and youth with disabilities. Our programmes include:</p>
-        <ul>
-            <li>Specialised education and learning support</li>
-            <li>Daily meals (breakfast and lunch)</li>
-            <li>Life skills training and developmental activities</li>
-            <li>Skills development initiatives including gardening, baking, farming (pigs and chickens), beadwork, jam and juice making</li>
-            <li>Advocacy for disability inclusion and awareness</li>
-        </ul>
+    <main style="max-width: 1200px; margin: auto;" class="programmes">
+  <section class="programme-section">
+    <div class="programme-text">
+      <h2 class="heading-2 red">Early Intervention Projects</h2>
+      <ul class="bullet-list">
+        <li>Specialised education and learning support</li>
+        <li>Daily meals (breakfast and lunch)</li>
+        <li>Life skills training and developmental activities</li>
+        <li>Disability awareness and inclusion advocacy</li>
+      </ul>
+      <p>Our early intervention programme supports holistic development for children with disabilities in Ezibeleni. We provide a safe, caring environment focused on growth, independence, and dignity.</p>
+    </div>
+    <div class="programme-image">
+      <img src="image-25.png" alt="Children at the centre" />
+    </div>
+  </section>
 
-        <hr>
-
-        <h2 class="heading-2">Skills Development Initiatives</h2>
-        <p>We focus on practical skills that empower our learners to become independent and self-sufficient. These initiatives include:</p>
-        <ul>
-            <li><strong>Gardening:</strong> Teaching sustainable practices and providing fresh produce.</li>
-            <li><strong>Baking:</strong> Developing culinary skills and creating products for sale.</li>
-            <li><strong>Farming:</strong> Raising pigs and chickens to understand animal husbandry.</li>
-            <li><strong>Beadwork:</strong> Encouraging creativity while producing beautiful crafts.</li>
-            <li><strong>Jam and Juice Making:</strong> Learning food preservation techniques.</li>
-        </ul>
+  <section class="programme-section alt">
+    <div class="programme-image">
+      <img src="image-27.png" alt="Gardening initiative" />
+    </div>
+    <div class="programme-text">
+      <h2 class="heading-2 green">Skills Development</h2>
+      <ul class="bullet-list">
+        <li><strong>Gardening:</strong> Sustainable food production.</li>
+        <li><strong>Baking:</strong> Teaching culinary basics and income generation.</li>
+        <li><strong>Farming:</strong> Pig and poultry care.</li>
+        <li><strong>Beadwork:</strong> Creativity through handmade crafts.</li>
+        <li><strong>Jam & Juice Making:</strong> Food preservation techniques.</li>
+      </ul>
+    </div>
+  </section>
     </main>
 
     <section>
