--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="programmes.html">Programmes</a>
         <a href="wishlist.html">Wishlist</a>
         <a href="contact-us.html">Contact Us</a>
-        <a href="blog.html">Blog</a>
+
       </nav>
     </div>
   </header>
@@ -211,6 +211,9 @@
       </a>
       <p>&copy; 2025 Phumelela Special Care Centre. All rights reserved. Caring for children with disabilities in Queenstown, South Africa.</p>
     </div>
+    <div class="npo-info">
+  <p>NPO Number: 086 262 NPO | PBO Number: 930056352</p>
+</div>
   </footer>
 
   <script>
