updates to programmes and donate pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -58,6 +58,7 @@
     </div>
     <div class="npo-info">
   <p>NPO Number: 086 262 NPO | PBO Number: 930056352</p>
+  <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
 </div>
   </footer>
 
