--- a/donate.html
+++ b/donate.html
@@ -88,15 +88,15 @@
       <div class="impact-grid">
         <div class="impact-item">
           <h4>R100 Donation</h4>
-          <p>Provides educational materials for one learner for a month</p>
+          <p>Helps provide essential learning materials and stationery for one learner for a month.</p>
         </div>
         <div class="impact-item">
           <h4>R500 Donation</h4>
-          <p>Supports therapeutic sessions for one child for a month</p>
+          <p>Contributes to daily nutritious meals and hygiene products, including sanitary pads for girl learners.</p>
         </div>
         <div class="impact-item">
           <h4>R1000 Donation</h4>
-          <p>Funds specialized equipment or assistive devices</p>
+          <p>Supports the purchase of assistive devices, adaptive learning resources, and critical supplies that help our centre run smoothly.</p>
         </div>
       </div>
     </section>
@@ -142,7 +142,7 @@
   <section class="contact">
     <h2>Contact Us About Donations</h2>
     <p>If you have questions about donating or would like to discuss other ways to support our work, please contact us using the form below.</p>
-    <form action="submit_form.php" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/xldlbaod" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="text" name="surname" placeholder="Your Surname" required />
       <input type="tel" name="cellnumber" placeholder="Cellphone Number" required />
@@ -161,6 +161,7 @@
         <img src="instagram-icon.png" alt="Follow Phumelela on Instagram" class="social-icon" />
       </a>
       <p>&copy; 2025 Phumelela Special Care Centre. All rights reserved. Caring for children with disabilities in Queenstown, South Africa.</p>
+      <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
     </div>
   </footer>
 
