--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <section class="contact">
     <h2>Contact Phumelela Special Care Centre</h2>
     <p>To learn more about our programmes for children with disabilities or get involved, contact us using the form below.</p>
-    <form action="submit_form.php" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/xldlbaod" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="text" name="surname" placeholder="Your Surname" required />
       <input type="tel" name="cellnumber" placeholder="Cellphone Number" required />
@@ -213,6 +213,7 @@
     </div>
     <div class="npo-info">
   <p>NPO Number: 086 262 NPO | PBO Number: 930056352</p>
+  <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
 </div>
   </footer>
 
