--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
         <section>
             <!-- Contact Us section -->
-            <form action="submit_form.php" method="post" class="form" novalidate>
+            <form action="https://formspree.io/f/xldlbaod" method="post" class="form" novalidate>
                 <h2 class="contact-us heading-2">Contact Us</h2>
                 <p>If you would like to learn more about Phumelela Special Care Centre, our programmes, or how you can support our work, please contact us:</p>
                 
@@ -105,6 +105,7 @@
     </div>
     <div class="npo-info">
   <p>NPO Number: 086 262 NPO | PBO Number: 930056352</p>
+  <p>Powered by <a href="https://earthkinstudios.co.za/index.html" target="_blank" rel="noopener noreferrer" class="power">Earthkin Studios.</a></p>
 </div>
   </footer>
   
